[package]
name = "sky-bet-roulette"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.1.16", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
axum = { version = "0.8.3" }
axum-test = { version = "17.3.0" }
axum-server = { version = "0.7.2" }
axum-serde = { version = "0.8.1" }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.14" }
jsonwebtoken = { version = "9.3.1" }
rand = { version = "0.9.0" }
validator = { version = "0.20.0", features = ["derive"] }
phf = { version = "0.11.3", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["uuid"] }

[dev-dependencies]
criterion = "0.5.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }

[[bench]]
name = "example_bench"
harness = false
